docs: added documention for update opening
