# handler/updateOpening.go
@@ -7,6 +7,20 @@ import (
 	"github.com/guilhermemcardoso/go-opportunities-api/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary Update opening
+// @Description Update an existing job opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param id query string true "Opening ID"
+// @Param request body UpdateOpeningRequest true "Request body"
+// @Success 200 {object} UpdateOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /opening [put]
 func UpdateOpeningHandler(ctx *gin.Context) {
 
 	request := UpdateOpeningRequest{}
